--- a/package.json
+++ b/package.json
@@ -1,28 +1,1 @@
-{
-"dependencies": {
-  "bootstrap": "^5.3.3",
-  "react": "^18.2.0",
-  "react-bootstrap": "^2.10.9",
-  "react-dom": "^18.2.0",
-  "react-router-dom": "^7.3.0",
-  "react-scripts": "^5.0.1"
-},
-
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
-}
+{"dependencies":{"axios":"^1.8.4","body-parser":"^2.2.0","bootstrap":"^5.3.3","cors":"^2.8.5","dotenv":"^16.4.7","express":"^4.21.2","mysql2":"^3.14.0","react":"^18.2.0","react-bootstrap":"^2.10.9","react-dom":"^18.2.0","react-router-dom":"^7.3.0","react-scripts":"^5.0.1","sequelize":"^6.37.6"},"scripts":{"start":"react-scripts start","build":"react-scripts build","test":"react-scripts test"},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]}}
